CC=mpicc
AM_CFLAGS = -I$(srcdir)/include
EXTRA_DIST=examples/mpiexample.c
lib_LIBRARIES = libutil.a
include_HEADERS = include/combinadic.h include/parse.h include/trees.h include/symtab.h include/utildefs.h include/graph.h include/cfgread.h include/types.h include/codes.h
libutil_a_SOURCES = parse.c symtab.c cfgread.c graph.c combinadic.c trees.c

